refactor documentation for Spark Runner with Beam